--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>com.mycompany</groupId>
+    <groupId>airecipes</groupId>
     <artifactId>AIRecipes</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
@@ -9,7 +9,7 @@
         <dependency>
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
-            <version>2.8.6</version>
+            <version>2.10.1</version>
             <type>jar</type>
         </dependency>
         <dependency>
@@ -19,10 +19,10 @@
             <type>jar</type>
         </dependency>
         <dependency>
-            <groupId>com.github.shenyuanqing.okhttp3</groupId>
+            <groupId>com.squareup.okhttp3</groupId>
             <artifactId>okhttp</artifactId>
-            <version>1.0.4</version>
-            <type>aar</type>
+            <version>4.10.0</version>
+            <type>jar</type>
             <exclusions>
                 <exclusion>
                     <groupId>com.android.support</groupId>
@@ -37,10 +37,68 @@
             <type>jar</type>
         </dependency>
     </dependencies>
+    
+    <build>
+        <resources>
+            <resource>
+                <directory>src/main/res</directory>
+                <includes>
+                    <include>
+                        *.jpg
+                    </include>
+                    <include>
+                        *.json
+                    </include>
+                </includes>
+            </resource>
+        </resources>
+        <plugins>
+            <plugin>
+                <groupId>
+                    org.apache.maven.plugins
+                </groupId>
+                <artifactId>
+                    maven-jar-plugin
+                </artifactId>
+                <version>
+                    3.3.0
+                </version>
+                <configuration>
+                    <archive>
+                        <manifest>
+                            <addClasspath>
+                                true
+                            </addClasspath>
+                            <mainClass>
+                                airecipes.AIRecipes
+                            </mainClass>
+                        </manifest>
+                    </archive>
+                </configuration>
+            </plugin>
+            <plugin>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <executions>
+                <execution>
+                    <phase>package</phase>
+                    <goals>
+                        <goal>single</goal>
+                    </goals>
+                </execution>
+                </executions>
+                <configuration>
+                <descriptorRefs>
+                    <descriptorRef>jar-with-dependencies</descriptorRef>
+                </descriptorRefs>
+                </configuration>
+            </plugin>
+        </plugins> 
+    </build>
+    
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
-        <exec.mainClass>com.mycompany.airecipes.AIRecipes</exec.mainClass>
+        <exec.mainClass>airecipes.AIRecipes</exec.mainClass>
     </properties>
 </project>
